sql/sql_yacc.yy
@@ -9122,9 +9122,7 @@ select:
           opt_procedure_or_into
           {
             Lex->pop_select();
-            if ($1->set_lock_to_the_last_select($3))
-              MYSQL_YYABORT;
-            if (Lex->select_finalize($1))
+            if (Lex->select_finalize($1, $3))
               MYSQL_YYABORT;
           }
         | with_clause query_expression_body
@@ -9139,9 +9137,7 @@ select:
             Lex->pop_select();
             $2->set_with_clause($1);
             $1->attach_to($2->first_select());
-            if ($2->set_lock_to_the_last_select($4))
-              MYSQL_YYABORT;
-            if (Lex->select_finalize($2))
+            if (Lex->select_finalize($2, $4))
               MYSQL_YYABORT;
           }
         ;
